# cim-graph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EVENT_DRIVEN_ARCHITECTURE.md  EXAMPLES.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MIGRATION_GUIDE.md  README.md  RELEASE_NOTES.md  SECURITY.md  claude.md  coverage-summary.md  coverage.lcov  example_events.json  readme.md  test-1390939-18331177909161110852_0.profraw  test-1390939-7216233916672538542_0.profraw  test-1391168-9861390354261298572_0.profraw
.cargo/: config.toml
.claude/: CLAUDE_MODULE_TEMPLATE.md  INDEX.md  MANDATORY_CHECKLIST.md  MODULE_SETUP.md  REORGANIZATION_PLAN.md  VALIDATION_STATUS.md
.claude/architecture/: module-dependencies.md
.claude/instructions/: dashboard-generation.md  git-prep.md  main-directives.md  progress-as-eventstore.md  sdlc.md
.claude/memory/: README.md  architecture.md  context-map.md  git-state-tracking.md  state.md  update-protocol.md
.claude/patterns/: cim-registry.md  conceptual-spaces.md  ddd-ecs-isomorphic-mapping.md  domain-assembly.md  domain-driven-design.md  event-sourcing.md  graph-patterns.md
.claude/scripts/: add-planning-phase-event.sh  detect-context.sh  generate-progress-dashboard.sh
.claude/standards/: nixos-environment.md  production-readiness.md  quality-assurance.md  rust-nix-integration.md  test-driven-development.md
.claude/templates/: client-implementation.md  infrastructure-setup.md  service-creation.md
.claude/workflows/: implementation-flow.md  new-cim-workflow.md  tdd-workflow.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: benchmarks.yml  ci.yml  coverage.yml  docs.yml  release.yml
benches/: README.md  event_processing.rs  graph_operations.rs  graph_types.rs  serialization.rs
benches/old/: graph_algorithms.rs
doc/architecture/: ipld_storage.md
doc/design/: acceptance-tests.md  aggregate-state-transitions.md  aggregate-transaction-tests.md  api-contracts.md  architecture-diagrams.md  cim-graph-design.md  development-workflow.md  domain-model.md  event-catalog-schema.json  event-catalog.json  event-design-correction.md  event-flows.md  event-storming-session.md  graph-api-specification.md  graph-domain-conceptual-model.md  graph-domain-events.md  graph-pattern-recognition.md  graph-trait-system.md  hopfield-networks.md  implementation-plan.md  mathematical-event-validation.md  mathematical-foundations.md  pattern-algorithms.md  pattern-query-language.md  refactoring-design.md  test-strategy.md  timestamp-handling.md  user-stories.md
doc/planning/: planning-kickoff.md  refactoring-plan.md  sprint-plan.md
doc/progress/: progress.json  progress.md  project-summary.md  sprint-2-summary.md
docs/: EVENT_DESIGN_BEST_PRACTICES.md  algorithms.md  api.md  architecture.md  best-practices.md  bounded_contexts.md  graph-types.md  index.md  installation.md  migration-guide.md  performance.md  quick-start.md  serialization.md
examples/: Cargo.toml  README.md  advanced_features.rs  algorithms_example.rs  basic_event_driven.rs  collaborative_graph.rs  complete_event_driven.rs  composed_example.rs  concept_example.rs  context_example.rs  demo_knowledge_base.rs  demo_task_manager.rs  ecs_graph_system.rs  event_analytics.rs  event_driven_simple.rs  event_sourcing_demo.rs  ipld_event_chains.rs  ipld_example.rs  nats_event_driven.rs  order_processing_system.rs  pure_event_driven.rs  quick_start.rs  serialization_example.rs  simple_workflow.rs  workflow_event_driven.rs  workflow_example.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_algorithms.rs  fuzz_graph_operations.rs  fuzz_serialization.rs
scripts/: check-release.sh  coverage.sh  release.sh
src/: channels.rs  error.rs  lib.rs  serde_support.rs
src/algorithms/: metrics.rs  mod.rs  pathfinding.rs  traversal.rs
src/analytics/: dashboard.rs  metrics.rs  mod.rs
src/conceptual_space/: events.rs  mod.rs  proof.rs  tessellation.rs  topology.rs  types.rs
src/contexts/: mod.rs
src/core/: aggregate_projection.rs  builder.rs  cim_graph.rs  edge.rs  event.rs  event_driven.rs  event_sourcing.rs  event_tests.rs  graph.rs  ipld_chain.rs  mod.rs  node.rs  petgraph_impl.rs  policies.rs  projection_engine.rs  state_machine.rs  tests.rs
src/events/: command_handlers.rs  graph_events.rs  mod.rs  subjects.rs
src/functors/: domain_functor.rs  kan_extension.rs  mod.rs
src/graphs/: composed.rs  concept.rs  context.rs  context_projection.rs  event_driven_workflow.rs  ipld.rs  ipld_event_chain.rs  ipld_projection.rs  ipld_projection_engine.rs  mod.rs  tests.rs  workflow.rs
src/nats/: jetstream.rs  mod.rs
src/optimization/: batching.rs  compression.rs  mod.rs  replay.rs
src/performance/: mod.rs
src/serde_support/: tests.rs
src/types/: mod.rs
tests/: concurrency_tests.rs  error_handling_tests.rs  event_driven_integration.rs  event_driven_projections.rs  event_graph_tests.rs  integration_tests.rs  nats_integration.rs  projection_tests.rs  property_tests.rs  stress_tests.rs  subject_integration.rs  test_serialization.rs
tests/acceptance/: mod.rs  us_001_create_graph.rs  us_002_add_nodes.rs  us_003_connect_nodes.rs  us_004_query_graph.rs  us_005_ipld_graph.rs  us_006_context_graph.rs  us_007_workflow_graph.rs  us_008_concept_graph.rs
tests/generators/: mod.rs
tests/integration/: algorithm_compatibility.rs  concurrent_operations.rs  cross_graph_operations.rs  error_scenarios.rs  event_propagation.rs  mod.rs  performance_scenarios.rs  real_world_workflows.rs  serialization_roundtrips.rs
tests/property/: README.md  algebraic_properties.rs  algorithm_properties.rs  generators.rs  graph_invariants.rs  mod.rs  pathological_cases.rs  serialization_properties.rs
