
[package]
name = "cim-graph"
version = "0.1.0"
edition = "2021"
authors = ["CIM Team <team@thecowboy.ai>"]
description = "Unified graph abstraction library consolidating all graph operations across the CIM ecosystem"
repository = "https://github.com/thecowboyai/cim-graph"
homepage = "https://github.com/thecowboyai/cim-graph"
documentation = "https://docs.rs/cim-graph"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["graph", "network", "ipld", "workflow", "concept"]
categories = ["data-structures", "algorithms", "network-programming"]
exclude = [
    ".github/",
    "doc/",
    "scripts/",
    "*.sh",
    ".gitignore",
    "CONTRIBUTING.md",
    "claude.md",
    "fuzz/",
    "tests/generators/",
    ".cargo/"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# CIM Domain Events
# cim-domain = { git = "https://github.com/thecowboyai/cim-domain.git" }

# Core dependencies
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph operations
petgraph = "0.8"

# Unique IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async support
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "time"], optional = true }
async-trait = { version = "0.1", optional = true }

# NATS JetStream for event persistence
async-nats = { version = "0.37", optional = true }
futures = { version = "0.3", optional = true }

# Parallel processing
rayon = "1.7"

[dev-dependencies]
# Testing
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
proptest = "1.4"
pretty_assertions = "1.4"

# Test utilities
fake = "2.9"
quickcheck = "1.0"
quickcheck_macros = "1.0"

# Additional test dependencies
bincode = "1.3"
rand = "0.8"

[features]
default = []
async = ["tokio", "async-trait"]
nats = ["async-nats", "futures", "async"]
full = ["async", "nats"]

[[bench]]
name = "graph_operations"
harness = false

[[bench]]
name = "graph_types"
harness = false

[[bench]]
name = "graph_algorithms"
harness = false

[[bench]]
name = "serialization"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3

[workspace]
members = []